--- a/locales/src/fr/translation.json
+++ b/locales/src/fr/translation.json
@@ -215,7 +215,7 @@
     "error": {
         "code": "Code d'erreur : __code__",
         "dataloadfailed": "Les données n'ont pu être chargées depuis __url__",
-        "econnrefused": "Connexion avec le serveur impossible",
+        "econnrefused": "Impossible d'établir une connexion avec le serveur de formulaires",
         "encryptionnotsupported": "Ce formulaire nécessite le chiffrement local des enregistrements. Malheureusement, votre navigateur web ne le prend pas en charge. Nous vous recommandons d'utiliser un navigateur web plus récent.",
         "instancenotfound": "L'enregistrement n'a pas été trouvé. Il a peut-être expiré.",
         "invalidediturl": "Ceci n'est pas une URL d'édition valide",
