add fix for selection

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -371,7 +371,7 @@
     },
     "selectpicker": {
         "noneselected": "none selected",
-        "numberselected": "__number__ selected"
+        "numberselected": "+1 selected"
     },
     "store": {
         "error": {
