[SQUASH] Do not disable the upload button unless there no finalized records in the queue, closes #43
Show a busy button state consistent with the rest of Enketo instead of the separate progress bar on top.

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -381,7 +381,7 @@
         }
     },
     "submission": {
-        "http0": "Failed (Offline?).",
+        "http0": "The server is not available or you may not be connected to the Internet.",
         "http2xx": "Unexpected response when submitting data.",
         "http400": "Data server did not accept data.",
         "http401": "Authentication problem with data server.",
