Show a more helpful error message if external data cannot be loaded in non-preview views, closes #422 (+1 squashed commit) Squashed commits: [b84f2251] Revert "Always allow form load to continue if external data is missing and show useful error messages"
This reverts commit 82a13cd60618cb53ca0ff1dd5b7ae714140d1601. (+1 squashed commit)
Squashed commits:
[4e4860c6] Revert "In offline-capable views prevent an exception from occurring if external data failed to be loaded"

This reverts commit 2b2db75e9bcf09309d23737d2d1b75f3e3a88079. (+1 squashed commit)
Squashed commits:
[2b2db75e] In offline-capable views prevent an exception from occurring if external data failed to be loaded (+1 squashed commit)
Squashed commits:
[82a13cd6] Always allow form load to continue if external data is missing and show useful error messages

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -214,7 +214,7 @@
     },
     "error": {
         "code": "Error Code: __code__",
-        "dataloadfailed": "Failed to load data from __url__",
+        "dataloadfailed": "Failed to load __filename__.",
         "econnrefused": "Could not connect with Form Server",
         "encryptionnotsupported": "This form requires local encryption of records. Unfortunately this is not supported by your browser. We recommend switching to a modern browser.",
         "formloadfailed": "Failed to load form",
