Fix: offline-capable upload messaging consistency
- Consistently display success banner, whether on load, user submission, or post-backoff success

- Consistently display failure alert whether caused by being offline or a non-auth error

- Display dialog for auth error, with wording updated to reflect queueing success (rather than warning about losing unsaved data, as there should not be at submission time)

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -163,6 +163,10 @@
         },
         "login": {
             "heading": "Login Required",
+            "queuedMsg": [
+                "Record queued for submission. In order to submit your queued data, you need to login.",
+                "Would you like to login now or later?"
+            ],
             "msg": [
                 "In order to submit your queued data, you need to login. If you want to do this now, you will be redirected, and lose unsaved information.",
                 "Would you like to login now or later?"
