--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -324,6 +324,7 @@
         "sw": "Swahili",
         "th": "Thai",
         "tr": "Turkish",
+        "uk": "Ukrainian",
         "vi": "Vietnamese",
         "zh": "Chinese"
     },
